--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#eeeeee"
+    android:background="#eee"
     tools:context=".MainActivity">
 
     <Button
@@ -12,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Start"
         android:fontFamily="@font/bahnschrift"
+        android:text="Start"
         android:textSize="19sp"
         app:layout_constraintEnd_toEndOf="@+id/chronometer"
         app:layout_constraintStart_toStartOf="@+id/chronometer"
@@ -25,8 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginTop="16dp"
-        android:text="Pause"
         android:fontFamily="@font/bahnschrift"
+        android:text="Pause"
         android:textSize="19sp"
         app:layout_constraintEnd_toStartOf="@+id/start"
         app:layout_constraintTop_toBottomOf="@+id/start" />
@@ -36,9 +36,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="156dp"
+        android:fontFamily="@font/bahnschrift"
         android:text="Reset"
         android:textSize="19sp"
-        android:fontFamily="@font/bahnschrift"
         app:layout_constraintBottom_toBottomOf="@+id/pause"
         app:layout_constraintStart_toEndOf="@+id/pause"
         app:layout_constraintTop_toTopOf="@+id/pause"
@@ -49,24 +49,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/britanic"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="26sp"
-        android:fontFamily="@font/britanic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dial" />
-
-    <com.example.deltaonsite1.Dial
-        android:id="@+id/dial"
-        android:layout_width="380dp"
-        android:layout_height="380dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="52dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></com.example.deltaonsite1.Dial>
 
     <ImageView
         android:id="@+id/imageView"
@@ -81,4 +69,16 @@
         app:layout_constraintStart_toEndOf="@+id/pause"
         app:layout_constraintTop_toBottomOf="@+id/start"
         app:srcCompat="@drawable/stop" />
+
+    <com.example.deltaonsite1.Dial
+        android:id="@+id/dial"
+        android:layout_width="380dp"
+        android:layout_height="380dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="52dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></com.example.deltaonsite1.Dial>
 </androidx.constraintlayout.widget.ConstraintLayout>
